Ejercicio Todo Complejo

--- a/angular/Directivas/src/app/app.component.html
+++ b/angular/Directivas/src/app/app.component.html
@@ -6,3 +6,17 @@
 </p>
 <app-semaforo></app-semaforo>
 <app-episodios></app-episodios>
+
+<div [ngSwitch]="departamento">
+  <p *ngSwitchCase="'tecnología'">Departamento Tecnología</p>
+  <p *ngSwitchCase="'electrodomésticos'">Departamento Electrodomésticos</p>
+  <p *ngSwitchCase="'hogar'">Departamento Hogar</p>
+  <p *ngSwitchDefault>Ninguno de los departamentos conocidos</p>
+</div>
+
+<p subrayado>Lorem fistrum ese que llega no te digo trigo por no llamarte Rodrigor llevame al sircoo se calle ustée.
+  Amatomaa jarl va usté muy cargadoo qué dise usteer a gramenawer no te digo trigo por no llamarte Rodrigor.
+
+  Va usté muy cargadoo al ataquerl diodeno no puedor a wan no te digo trigo por no llamarte Rodrigor te voy a borrar el
+  cerito la caidita caballo blanco caballo negroorl de la pradera a peich. Pecador torpedo sexuarl te voy a borrar el
+  cerito.</p>
