--- a/angular/Trivial/src/app/game/game.component.html
+++ b/angular/Trivial/src/app/game/game.component.html
@@ -16,6 +16,11 @@
             Preguntas restantes: {{ preguntas.length - preguntaActiva }}
         </div>
     </div>
+    <div class="row">
+        <div class="col-12">
+            {{mensaje}}
+        </div>
+    </div>
     <div class="row mt-3">
         <div class="col-12">
             <div class="progress">
