--- a/angular/Formularios/src/app/model/model.component.html
+++ b/angular/Formularios/src/app/model/model.component.html
@@ -1,30 +1,43 @@
-<form [formGroup]="formulario" (ngSubmit)="onSubmit()">
+<p>{{ formulario.controls.nombre.errors| json }}</p>
+<form [formGroup]="formulario" (ngSubmit)="onSubmit()" novalidate>
     <div class="form-group">
         <label>Nombre</label>
-        <input type="text" class="form-control">
+        <input type="text" class="form-control" formControlName="nombre">
     </div>
+    <p class="error" *ngIf="formulario.controls.nombre.errors?.required && formulario.controls.nombre.touched">
+        El campo nombre es requerido
+    </p>
+    <p class="error" *ngIf="formulario.controls.nombre.errors?.maxlength && formulario.controls.nombre.touched">
+        El campo nombre debe tener como máximo {{ formulario.controls.nombre.errors.maxlength.requiredLength }}
+        caracteres. Has introducido {{ formulario.controls.nombre.errors.maxlength.actualLength }} caracteres
+    </p>
     <div class="form-group">
         <label>Apellidos</label>
-        <input type="text" class="form-control">
+        <input type="text" class="form-control" formControlName="apellidos">
     </div>
     <div class="form-group">
         <label>Edad</label>
-        <input type="text" class="form-control">
+        <input type="text" class="form-control" formControlName="edad">
     </div>
+    <p class="error" *ngIf="formulario.controls.edad.errors?.edadvalidator && formulario.controls.edad.touched">
+        La edad debe estar entre {{ formulario.controls.edad.errors.edadvalidator.min }} y
+        {{ formulario.controls.edad.errors.edadvalidator.max }} 😉💃
+    </p>
     <div class="form-group">
         <label>Email</label>
-        <input type="text" class="form-control">
+        <input type="text" class="form-control" formControlName="email">
     </div>
     <div class="form-group">
         <label>Password</label>
-        <input type="text" class="form-control">
+        <input type="password" class="form-control" formControlName="password">
     </div>
     <div class="form-group">
         <label>Repite Password</label>
-        <input type="text" class="form-control">
+        <input type="password" class="form-control" formControlName="repite_password">
     </div>
     <div class="form-group">
         <label>Privacidad</label>
-        <input type="checkbox" class="form-control">
+        <input type="checkbox" class="form-control" formControlName="privacidad">
     </div>
+    <input type="submit" value="Enviar" class="btn btn-outline-info btn-block" [disabled]="formulario.invalid">
 </form>
