--- a/angular/Todo/src/app/formulario/formulario.component.html
+++ b/angular/Todo/src/app/formulario/formulario.component.html
@@ -1,5 +1,5 @@
 <div class="form-group">
-    <label for=""></label>
+    <label for="">Texto del Todo</label>
     <input type="text" class="form-control" [(ngModel)]="nuevaTarea.mensaje">
 </div>
 <div class="form-group">
