--- a/angular/Galeria/src/app/slider/slider.component.html
+++ b/angular/Galeria/src/app/slider/slider.component.html
@@ -1,13 +1,7 @@
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img class="d-block w-100" src="..." alt="First slide">
-        </div>
-        <div class="carousel-item">
-            <img class="d-block w-100" src="..." alt="Second slide">
-        </div>
-        <div class="carousel-item">
-            <img class="d-block w-100" src="..." alt="Third slide">
+        <div class="carousel-item" *ngFor="let imagen of arrImagenes; let i = index;" [ngClass]="{active: i === 0}">
+            <img class="d-block w-100" [src]="imagen.url" [alt]="imagen.titulo">
         </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
