--- a/node/appEscuelas/views/alumnos/form.pug
+++ b/node/appEscuelas/views/alumnos/form.pug
@@ -5,7 +5,7 @@ block content
     form(action="/alumnos/create", method="POST")
         .form-group
             label Nombre
-            input.form-control(type="text", name="nombre")
+            input.form-control(type="text", name="nombre", value="")
         .form-group
             label Apellidos
             input.form-control(type="text", name="apellidos")
